--- a/lib/messagebundles/MessagesBundle_ru.properties
+++ b/lib/messagebundles/MessagesBundle_ru.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.2.4
+# Messages Bundle for LimeWire 4.2.6
 # Specialization for: Russian - Russia
 # Translated by Eugene Romanenko <eros2@os2.ru>
 ################################################################################
@@ -67,7 +67,7 @@ GENERAL_DEFAULT_BUTTON_LABEL=\u0423\u043c\u043e\u043b\u0447\u0430\u043d\u0438\u0
 #### GENERAL_BROWSE_BUTTON_LABEL=Browse...
 GENERAL_BROWSE_BUTTON_LABEL=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440...
 #### GENERAL_BROWSE_HOST_LABEL=Browse Host
-GENERAL_BROWSE_HOST_LABEL=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0442\u044c \u0445\u043e\u0441\u0442
+GENERAL_BROWSE_HOST_LABEL=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0442\u044c \u0445\u043e\u0441\u0442\u0430
 #### GENERAL_BROWSE_HOST_TIP=View All Files on the Selected Computer
 GENERAL_BROWSE_HOST_TIP=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0442\u044c \u0432\u0441\u0435 \u0444\u0430\u0439\u043b\u044b \u043d\u0430 \u0432\u044b\u0431\u0440\u0430\u043d\u043d\u043e\u043c \u043a\u043e\u043c\u043f\u044c\u044e\u0442\u0435\u0440\u0435
 
@@ -554,7 +554,7 @@ SEARCH_WISHLIST_BUTTON_LABEL=\u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c \u
 #### SEARCH_WISHLIST_BUTTON_TIP=Spawn a "LimeWire Robot" to Look for the Content
 SEARCH_WISHLIST_BUTTON_TIP=\u0417\u0430\u043f\u0443\u0441\u0442\u0438\u0442\u044c "\u0440\u043e\u0431\u043e\u0442\u0430 LimeWire" \u0434\u043b\u044f \u043f\u043e\u0438\u0441\u043a\u0430 \u0436\u0435\u043b\u0430\u0435\u043c\u043e\u0433\u043e \u043a\u043e\u043d\u0442\u0435\u043d\u0442\u0430
 #### SEARCH_BROWSE_HOST_BUTTON_LABEL=Browse Host
-SEARCH_BROWSE_HOST_BUTTON_LABEL=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0442\u044c \u0445\u043e\u0441\u0442
+SEARCH_BROWSE_HOST_BUTTON_LABEL=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0442\u044c \u0445\u043e\u0441\u0442\u0430
 #### SEARCH_BROWSE_HOST_BUTTON_TIP=View All Files on Selected Computer
 SEARCH_BROWSE_HOST_BUTTON_TIP=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0442\u044c \u0432\u0441\u0435 \u0444\u0430\u0439\u043b\u044b \u043d\u0430 \u0432\u044b\u0431\u0440\u0430\u043d\u043d\u043e\u043c \u043a\u043e\u043c\u043f\u044c\u044e\u0442\u0435\u0440\u0435
 #### SEARCH_CHAT_BUTTON_LABEL=Chat...
@@ -580,7 +580,7 @@ SEARCH_PUBLIC_LAUNCH_STRING=\u0412\u044b\u043f\u043e\u043b\u043d\u0438\u0442\u04
 #### SEARCH_PUBLIC_STOP_STRING=Stop Search
 SEARCH_PUBLIC_STOP_STRING=\u041e\u0441\u0442\u0430\u043d\u043e\u0432\u0438\u0442\u044c \u043f\u043e\u0438\u0441\u043a
 #### SEARCH_PUBLIC_BROWSE_STRING=Browse Host
-SEARCH_PUBLIC_BROWSE_STRING=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0442\u044c \u0445\u043e\u0441\u0442
+SEARCH_PUBLIC_BROWSE_STRING=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0442\u044c \u0445\u043e\u0441\u0442\u0430
 #### SEARCH_PUBLIC_CHAT_STRING=Chat With Host
 SEARCH_PUBLIC_CHAT_STRING=\u0427\u0430\u0442 \u0441 \u0445\u043e\u0441\u0442\u043e\u043c
 #### SEARCH_PUBLIC_BITZI_LOOKUP_STRING=Bitzi Web Lookup...
@@ -855,7 +855,7 @@ DOWNLOAD_POPUP_MENU_LAUNCH=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440 \u04
 #### DOWNLOAD_POPUP_MENU_CHAT=Chat with Host
 DOWNLOAD_POPUP_MENU_CHAT=\u0427\u0430\u0442 \u0441 \u0445\u043e\u0441\u0442\u043e\u043c
 #### DOWNLOAD_POPUP_MENU_BROWSE=Browse Host
-DOWNLOAD_POPUP_MENU_BROWSE=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440 \u0445\u043e\u0441\u0442\u0430
+DOWNLOAD_POPUP_MENU_BROWSE=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0442\u044c \u0445\u043e\u0441\u0442\u0430
 #### DOWNLOAD_PRIORITY_COLUMN=Priority
 DOWNLOAD_PRIORITY_COLUMN=\u041f\u0440\u0438\u043e\u0440\u0438\u0442\u0435\u0442
 #### DOWNLOAD_NAME_COLUMN=Name
@@ -1136,9 +1136,9 @@ CV_STRING_ULTRAPEER=[Ultrapeer]
 #### CV_TABLE_STRING_KBPSEC=KB/s
 CV_TABLE_STRING_KBPSEC=KB/\u0441\u0435\u043a
 #### CV_ADD_HOST_LABEL=Host:
-#? CV_ADD_HOST_LABEL=
+CV_ADD_HOST_LABEL=\u0425\u043e\u0441\u0442:
 #### CV_ADD_PORT_LABEL=Port:
-#? CV_ADD_PORT_LABEL=
+CV_ADD_PORT_LABEL=\u041f\u043e\u0440\u0442:
 #### CV_ADD_DIALOG_TITLE=Add Gnutella Connection
 #? CV_ADD_DIALOG_TITLE=
 
@@ -1432,7 +1432,7 @@ LIST_EDITOR_ADD_BUTTON=\u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c...
 #### LIST_EDITOR_ADD_BUTTON_2=Add
 LIST_EDITOR_ADD_BUTTON_2=\u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c
 #### LIST_EDITOR_BROWSE_BUTTON=Browse...
-LIST_EDITOR_BROWSE_BUTTON=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440...
+LIST_EDITOR_BROWSE_BUTTON=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0442\u044c...
 #### LIST_EDITOR_REMOVE_BUTTON=Remove
 LIST_EDITOR_REMOVE_BUTTON=\u0423\u0434\u0430\u043b\u0438\u0442\u044c
 #### LIST_EDITOR_ADD_BUTTON_TIP=Add New List Item
@@ -1839,7 +1839,7 @@ ERROR_SAVE_META_BAD=\u0423\u043a\u0430\u0437\u0430\u043d \u043d\u0435\u0432\u043
 #### ERROR_REMOVE_LAST_COL=You cannot turn off all columns.
 ERROR_REMOVE_LAST_COL=\u041d\u0435\u043b\u044c\u0437\u044f \u0443\u0431\u0440\u0430\u0442\u044c \u0432\u0441\u0435 \u043a\u043e\u043b\u043e\u043d\u043a\u0438.
 #### ERROR_BROWSE_HOST_FAILED_BEGIN_KEY=Could not browse host
-ERROR_BROWSE_HOST_FAILED_BEGIN_KEY=\u041d\u0435 \u043c\u043e\u0433\u0443 \u043f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0442\u044c \u0445\u043e\u0441\u0442
+ERROR_BROWSE_HOST_FAILED_BEGIN_KEY=\u041d\u0435 \u043c\u043e\u0433\u0443 \u043f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0442\u044c \u0445\u043e\u0441\u0442\u0430
 #### ERROR_BROWSE_HOST_FAILED_END_KEY=.
 ERROR_BROWSE_HOST_FAILED_END_KEY=.
 #### ERROR_APPLYING_INVALID_THEME_FILE=The theme you are applying is invalid. LimeWire will revert to the default theme.
@@ -2511,7 +2511,7 @@ OPTIONS_PORT_BOX_LABEL=\u041f\u043e\u0440\u0442 \u0434\u043b\u044f \u043e\u0436\
 #### OPTIONS_FORCE_IP_CHECK_BOX_LABEL=Force IP
 #? OPTIONS_FORCE_IP_CHECK_BOX_LABEL=
 #### OPTIONS_FORCE_IP_PORT_LABEL=Port:
-#? OPTIONS_FORCE_IP_PORT_LABEL=
+OPTIONS_FORCE_IP_PORT_LABEL=\u041f\u043e\u0440\u0442:
 
 ################################################################################
 # Key/Value pairs for the options for setting the connection strings
@@ -2536,11 +2536,11 @@ OPTIONS_PORT_BOX_LABEL=\u041f\u043e\u0440\u0442 \u0434\u043b\u044f \u043e\u0436\
 #### OPTIONS_USE_PRIVATE_NET_CHECK_BOX_LABEL=Connect to a Private Network?
 #? OPTIONS_USE_PRIVATE_NET_CHECK_BOX_LABEL=
 #### OPTIONS_PRIVATE_CACHE_IP_LABEL=Hostname
-#? OPTIONS_PRIVATE_CACHE_IP_LABEL=
+OPTIONS_PRIVATE_CACHE_IP_LABEL=\u0425\u043e\u0441\u0442\u0438\u043c\u044f
 #### OPTIONS_PRIVATE_CACHE_PORT_LABEL=Port
-#? OPTIONS_PRIVATE_CACHE_PORT_LABEL=
+OPTIONS_PRIVATE_CACHE_PORT_LABEL=\u041f\u043e\u0440\u0442
 #### OPTIONS_PRIVATE_CACHE_NAME_LABEL=Name
-#? OPTIONS_PRIVATE_CACHE_NAME_LABEL=
+OPTIONS_PRIVATE_CACHE_NAME_LABEL=\u0418\u043c\u044f
 
 ################################################################################
 # Key/Value pairs for the options for automatically clearing uploads
@@ -2563,11 +2563,11 @@ OPTIONS_PROXY_LABEL=\u041d\u0430\u0441\u0442\u0440\u043e\u0439\u043a\u0430 \u043
 #### OPTIONS_PROXY_NO_PROXY_BUTTON_LABEL=No Proxy
 OPTIONS_PROXY_NO_PROXY_BUTTON_LABEL=\u0411\u0435\u0437 \u043f\u0440\u043e\u043a\u0441\u0438
 #### OPTIONS_PROXY_SOCKS4_BUTTON_LABEL=Socks v4
-#? OPTIONS_PROXY_SOCKS4_BUTTON_LABEL=
+OPTIONS_PROXY_SOCKS4_BUTTON_LABEL=Socks v4
 #### OPTIONS_PROXY_SOCKS5_BUTTON_LABEL=Socks v5
-#? OPTIONS_PROXY_SOCKS5_BUTTON_LABEL=
+OPTIONS_PROXY_SOCKS5_BUTTON_LABEL=Socks v5
 #### OPTIONS_PROXY_HTTP_BUTTON_LABEL=HTTP
-#? OPTIONS_PROXY_HTTP_BUTTON_LABEL=
+OPTIONS_PROXY_HTTP_BUTTON_LABEL=\u041f\u0440\u043e\u043a\u0441\u0438 HTTP
 #### OPTIONS_PROXY_HOST_LABEL=Proxy
 OPTIONS_PROXY_HOST_LABEL=\u0425\u043e\u0441\u0442
 #### OPTIONS_PROXY_PORT_LABEL=Port
@@ -2605,7 +2605,7 @@ STATS_ADVANCED_CHECK_BOX_LABEL=\u041f\u043e\u043a\u0430\u0437\u044b\u0432\u0430\
 
 # Advanced Gnutella messages panes
 #### GNUTELLA_MESSAGES=Gnutella
-#? GNUTELLA_MESSAGES=
+GNUTELLA_MESSAGES=Gnutella
 
 ###################################################################
 # Key/value pairs for network state statistics panel
@@ -3825,7 +3825,7 @@ STATS_TOTAL_DOWNSTREAM_BANDWIDTH_LABEL=\u0418\u043d\u0444\u043e\u0440\u043c\u043
 #### UPLOAD_STAT_PUSH_PROXY_FAILED=Failed Push Proxy
 #? UPLOAD_STAT_PUSH_PROXY_FAILED=
 #### UPLOAD_STAT_BROWSE_HOST=Browse Host
-UPLOAD_STAT_BROWSE_HOST=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0442\u044c \u0445\u043e\u0441\u0442
+UPLOAD_STAT_BROWSE_HOST=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0442\u044c \u0445\u043e\u0441\u0442\u0430
 #### UPLOAD_STAT_PUSH_PROXY=Push Proxy
 #? UPLOAD_STAT_PUSH_PROXY=
 #### UPLOAD_STAT_UPDATE_FILE=Update File
