--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -363,6 +363,7 @@ SEARCH_TYPE_BROWSEHOST=Direct Connect
 SEARCH_BROWSEHOST_TITLE=Got Friends?
 SEARCH_BROWSEHOST_DESC=Enter the IP address of a friend you'd like to connect to, click 'Direct Connect', and LimeWire will try to browse the files of that user.
 SEARCH_BROWSEHOST_MYIP=When your friends want to connect to you, they should enter
+SEARCH_BROWSEHOST_FIREWALLED=Your computer is behind a firewall or router and cannot receive direct connections.
 SEARCH_BROWSEHOST_BUTTON=Direct Connect
 SEARCH_WHATSNEW_HIDE_ADULT=Hide Adult Content
 SEARCH_WHATSNEW_TITLE_ONE=Don't Know
