--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -529,6 +529,7 @@ DOWNLOAD_APPLY_NEW_THEME_END=." Would you like to use this new skin?
 DOWNLOAD_POSSIBLE_HOSTS=Possible Hosts
 DOWNLOAD_BUSY_HOSTS=Busy Hosts
 DOWNLOAD_QUEUED_HOSTS=Remotely Queued
+DOWNLOAD_CHUNKS=Chunks 
 DOWNLOAD_SEARCHING=Locating Sources...
 DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Sorry, but LimeWire was unable to restart your old downloads.
 DOWNLOAD_MAGNET_DIALOG=Would you like to download
