--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -952,9 +952,9 @@ DOWNLOAD_BUSY_HOSTS=Hôtes occupés
 #### DOWNLOAD_QUEUED_HOSTS=Remotely Queued
 DOWNLOAD_QUEUED_HOSTS=En file d'attente distante
 #### DOWNLOAD_CHUNKS=Chunks
-#? DOWNLOAD_CHUNKS=
+DOWNLOAD_CHUNKS=Fragments
 #### DOWNLOAD_LOST=Lost To Corruption
-#? DOWNLOAD_LOST=
+DOWNLOAD_LOST=Rejeté car corrompu
 #### DOWNLOAD_SEARCHING=Locating Sources...
 DOWNLOAD_SEARCHING=Localise d'autres sources...
 #### DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Sorry, but LimeWire was unable to restart your old downloads.
