--- a/lib/messagebundles/MessagesBundle_sr.properties
+++ b/lib/messagebundles/MessagesBundle_sr.properties
@@ -264,9 +264,9 @@ LIBRARY_TIP=\u041f\u043e\u0433\u043b\u0435\u0434\u0430\u0458 \u0440\u0435\u043f\
 # Key/Value pairs for the pull-down menus in the main window
 ################################################################################
 #### MENU_FILE_TITLE=File
-MENU_FILE_TITLE=\u0414\u0430\u0442\u043e\u0442\u0435\u043a\u0435 (F)
+MENU_FILE_TITLE=\u0414\u0430\u0442\u043e\u0442\u0435\u043a\u0435 (D)
 #### MENU_FILE_TITLE_MNEMONIC=F
-MENU_FILE_TITLE_MNEMONIC=F
+MENU_FILE_TITLE_MNEMONIC=D
 #### MENU_FILE_CLOSE=Close
 MENU_FILE_CLOSE=\u0417\u0430\u0442\u0432\u043e\u0440\u0438 (C)
 #### MENU_FILE_CLOSE_MNEMONIC=C
@@ -343,34 +343,34 @@ MENU_NAV_TITLE=\u041d\u0430\u0432\u0438\u0433\u0430\u0446\u0438\u0458\u0430 (N)
 #### MENU_NAV_TITLE_MNEMONIC=N
 MENU_NAV_TITLE_MNEMONIC=N
 #### MENU_NAV_SEARCH=Search
-MENU_NAV_SEARCH=\u0422\u0440\u0430\u0436\u0438 (S)
+MENU_NAV_SEARCH=\u0422\u0440\u0430\u0436\u0438 (T)
 #### MENU_NAV_SEARCH_MNEMONIC=S
-MENU_NAV_SEARCH_MNEMONIC=S
+MENU_NAV_SEARCH_MNEMONIC=T
 #### MENU_NAV_SEARCH_ACCESSIBLE=Display the Search Screen
 MENU_NAV_SEARCH_ACCESSIBLE=\u041f\u0440\u0438\u043a\u0430\u0436\u0438 \u043f\u0440\u043e\u0437\u043e\u0440 \u0437\u0430 \u043f\u0440\u0435\u0442\u0440\u0430\u0433\u0443.
 #### MENU_NAV_MONITOR=Monitor
-MENU_NAV_MONITOR=\u041f\u0440\u0430\u045b\u0435\u045a\u0435 (M)
+MENU_NAV_MONITOR=\u041f\u0440\u0430\u045b\u0435\u045a\u0435 (P)
 #### MENU_NAV_MONITOR_MNEMONIC=M
-MENU_NAV_MONITOR_MNEMONIC=M
+MENU_NAV_MONITOR_MNEMONIC=P
 #### MENU_NAV_MONITOR_ACCESSIBLE=Display the Monitor Screen
 MENU_NAV_MONITOR_ACCESSIBLE=\u041f\u0440\u0438\u043a\u0430\u0436\u0438 \u043f\u0440\u043e\u0437\u043e\u0440 \u043f\u0440\u0430\u045b\u0435\u045a\u0430.
 #### MENU_NAV_CONN=Connections
-MENU_NAV_CONN=\u0412\u0435\u0437\u0435 (C)
+MENU_NAV_CONN=\u0412\u0435\u0437\u0435 (V)
 #### MENU_NAV_CONN_MNEMONIC=C
-MENU_NAV_CONN_MNEMONIC=C
+MENU_NAV_CONN_MNEMONIC=V
 #### MENU_NAV_CONN_ACCESSIBLE=Display the Connections Screen
 MENU_NAV_CONN_ACCESSIBLE=\u041f\u0440\u0438\u043a\u0430\u0436\u0438 \u043f\u0440\u043e\u0437\u043e\u0440 \u0432\u0435\u0437\u0430.
 #### MENU_NAV_LIB=Library
-MENU_NAV_LIB=\u0411\u0438\u0431\u043b\u0438\u043e\u0442\u0435\u043a\u0430 (L)
+MENU_NAV_LIB=\u0411\u0438\u0431\u043b\u0438\u043e\u0442\u0435\u043a\u0430 (B)
 #### MENU_NAV_LIB_MNEMONIC=L
-MENU_NAV_LIB_MNEMONIC=L
+MENU_NAV_LIB_MNEMONIC=B
 #### MENU_NAV_LIB_ACCESSIBLE=Display the Library Screen
 MENU_NAV_LIB_ACCESSIBLE=\u041f\u0440\u0438\u043a\u0430\u0436\u0438 \u0435\u043a\u0440\u0430\u043d \u0431\u0438\u0431\u043b\u0438\u043e\u0442\u0435\u043a\u0435.
 
 #### MENU_VIEW_TITLE=View
-MENU_VIEW_TITLE=\u041f\u0440\u0435\u0433\u043b\u0435\u0434 (V)
+MENU_VIEW_TITLE=\u041f\u0440\u0435\u0433\u043b\u0435\u0434 (P)
 #### MENU_VIEW_TITLE_MNEMONIC=V
-MENU_VIEW_TITLE_MNEMONIC=V
+MENU_VIEW_TITLE_MNEMONIC=P
 #### MENU_VIEW_SMALL_ICONS=Use Small Icons
 MENU_VIEW_SMALL_ICONS=\u041c\u0430\u043b\u0435 \u0438\u043a\u043e\u043d\u0435 (S)
 #### MENU_VIEW_SMALL_ICONS_MNEMONIC=S
@@ -384,55 +384,55 @@ MENU_VIEW_TEXT_WITH_ICONS_MNEMONIC=T
 #### MENU_VIEW_TEXT_WITH_ICONS_ACCESSIBLE=Show Text Below Icons
 MENU_VIEW_TEXT_WITH_ICONS_ACCESSIBLE=\u041f\u0440\u0438\u043a\u0430\u0436\u0438 \u0442\u0435\u043a\u0441\u0442 \u0438\u0441\u043f\u043e\u0434 \u0438\u043a\u043e\u043d\u0430.
 #### MENU_VIEW_SHOW_HIDE_TITLE=Show/Hide
-MENU_VIEW_SHOW_HIDE_TITLE=\u041f\u0440\u0438\u043a\u0430\u0436\u0438/\u0421\u0430\u043a\u0440\u0438\u0458 (W)
+MENU_VIEW_SHOW_HIDE_TITLE=\u041f\u0440\u0438\u043a\u0430\u0436\u0438/\u0421\u0430\u043a\u0440\u0438\u0458 (P)
 #### MENU_VIEW_SHOW_HIDE_TITLE_MNEMONIC=W
-MENU_VIEW_SHOW_HIDE_TITLE_MNEMONIC=W
+MENU_VIEW_SHOW_HIDE_TITLE_MNEMONIC=P
 #### MENU_VIEW_SHOW_HIDE_ACCESSIBLE=Show or Hide individual tabs
 MENU_VIEW_SHOW_HIDE_ACCESSIBLE=\u041f\u0440\u0438\u043a\u0430\u0436\u0438 \u0438\u043b\u0438 \u0441\u0430\u043a\u0440\u0438\u0458 \u043f\u043e\u0458\u0435\u0434\u0438\u043d\u0430\u0447\u043d\u0435 \u0442\u0430\u0431\u043e\u0432\u0435.
 #### MENU_VIEW_MONITOR=Monitor
-MENU_VIEW_MONITOR=\u041f\u0440\u0430\u045b\u0435\u045a\u0435 (M)
+MENU_VIEW_MONITOR=\u041f\u0440\u0430\u045b\u0435\u045a\u0435 (P)
 #### MENU_VIEW_MONITOR_MNEMONIC=M
-MENU_VIEW_MONITOR_MNEMONIC=M
+MENU_VIEW_MONITOR_MNEMONIC=P
 #### MENU_VIEW_MONITOR_ACCESSIBLE=Show Monitor Window
 MENU_VIEW_MONITOR_ACCESSIBLE=\u041f\u0440\u0438\u043a\u0430\u0436\u0438 \u043f\u0440\u043e\u0437\u043e\u0440 \u043f\u0440\u0430\u045b\u0435\u045a\u0430.
 #### MENU_VIEW_CONNECTIONS=Connections
-MENU_VIEW_CONNECTIONS=\u0412\u0435\u0437\u0435 (C)
+MENU_VIEW_CONNECTIONS=\u0412\u0435\u0437\u0435 (V)
 #### MENU_VIEW_CONNECTIONS_MNEMONIC=C
-MENU_VIEW_CONNECTIONS_MNEMONIC=C
+MENU_VIEW_CONNECTIONS_MNEMONIC=V
 #### MENU_VIEW_CONNECTIONS_ACCESSIBLE=Show Connections Window
 MENU_VIEW_CONNECTIONS_ACCESSIBLE=\u041f\u0440\u0438\u043a\u0430\u0436\u0438 \u043f\u0440\u043e\u0437\u043e\u0440 \u0432\u0435\u0437\u0430.
 #### MENU_VIEW_LIBRARY=Library
-MENU_VIEW_LIBRARY=\u0411\u0438\u0431\u043b\u0438\u043e\u0442\u0435\u043a\u0430 (L)
+MENU_VIEW_LIBRARY=\u0411\u0438\u0431\u043b\u0438\u043e\u0442\u0435\u043a\u0430 (B)
 #### MENU_VIEW_LIBRARY_MNEMONIC=L
-MENU_VIEW_LIBRARY_MNEMONIC=L
+MENU_VIEW_LIBRARY_MNEMONIC=B
 #### MENU_VIEW_LIBRARY_ACCESSIBLE=Show Library Window
 MENU_VIEW_LIBRARY_ACCESSIBLE=\u041f\u0440\u0438\u043a\u0430\u0436\u0438 \u043f\u0440\u043e\u0437\u043e\u0440 \u0431\u0438\u0431\u043b\u0438\u043e\u0442\u0435\u043a\u0435.
 #### MENU_VIEW_THEMES_TITLE=Apply Skins
-MENU_VIEW_THEMES_TITLE=\u041f\u0440\u0438\u043c\u0458\u0435\u043d\u0438 \u0441\u043a\u0438\u043d\u043e\u0432\u0435 (A)
+MENU_VIEW_THEMES_TITLE=\u041f\u0440\u0438\u043c\u0458\u0435\u043d\u0438 \u0441\u043a\u0438\u043d\u043e\u0432\u0435 (S)
 #### MENU_VIEW_THEMES_TITLE_MNEMONIC=A
-MENU_VIEW_THEMES_TITLE_MNEMONIC=A
+MENU_VIEW_THEMES_TITLE_MNEMONIC=S
 #### MENU_VIEW_THEMES_GET_MORE=Get More Skins
-MENU_VIEW_THEMES_GET_MORE=\u041f\u0440\u0435\u0443\u0437\u043c\u0438 \u0458\u043e\u0448 \u0441\u043a\u0438\u043d\u043e\u0432\u0430 (G)
+MENU_VIEW_THEMES_GET_MORE=\u041f\u0440\u0435\u0443\u0437\u043c\u0438 \u0458\u043e\u0448 \u0441\u043a\u0438\u043d\u043e\u0432\u0430 (P)
 #### MENU_VIEW_THEMES_GET_MORE_MNEMONIC=G
-MENU_VIEW_THEMES_GET_MORE_MNEMONIC=G
+MENU_VIEW_THEMES_GET_MORE_MNEMONIC=P
 #### MENU_VIEW_THEMES_GET_MORE_ACCESSIBLE=Find more skins from limewire.com
 MENU_VIEW_THEMES_GET_MORE_ACCESSIBLE=\u041f\u0440\u043e\u043d\u0430\u0452\u0438 \u0458\u043e\u0448 \u0441\u043a\u0438\u043d\u043e\u0432\u0430 \u043d\u0430 limewire.com.
 #### MENU_VIEW_THEMES_REFRESH=Refresh Skins
-MENU_VIEW_THEMES_REFRESH=\u041e\u0441\u0432\u0458\u0435\u0436\u0438 \u0441\u043a\u0438\u043d\u043e\u0432\u0435 (R)
+MENU_VIEW_THEMES_REFRESH=\u041e\u0441\u0432\u0458\u0435\u0436\u0438 \u0441\u043a\u0438\u043d\u043e\u0432\u0435 (O)
 #### MENU_VIEW_THEMES_REFRESH_MNEMONIC=R
-MENU_VIEW_THEMES_REFRESH_MNEMONIC=R
+MENU_VIEW_THEMES_REFRESH_MNEMONIC=O
 #### MENU_VIEW_THEMES_REFRESH_ACCESSIBLE=Reload available skins from disk
 MENU_VIEW_THEMES_REFRESH_ACCESSIBLE=\u0423\u0447\u0438\u0442\u0430\u0458 \u0434\u043e\u0441\u0442\u0443\u043f\u043d\u0435 \u0441\u043a\u0438\u043d\u043e\u0432\u0435 \u0441\u0430 \u0434\u0438\u0441\u043a\u0430.
 #### MENU_VIEW_THEMES_USE_DEFAULT=Use Default
-MENU_VIEW_THEMES_USE_DEFAULT=\u041a\u043e\u0440\u0438\u0441\u0442\u0438 \u043e\u0441\u043d\u043e\u0432\u043d\u0435 (D)
+MENU_VIEW_THEMES_USE_DEFAULT=\u041a\u043e\u0440\u0438\u0441\u0442\u0438 \u043e\u0441\u043d\u043e\u0432\u043d\u0435 (K)
 #### MENU_VIEW_THEMES_USE_DEFAULT_MNEMONIC=D
-MENU_VIEW_THEMES_USE_DEFAULT_MNEMONIC=D
+MENU_VIEW_THEMES_USE_DEFAULT_MNEMONIC=K
 #### MENU_VIEW_THEMES_USE_DEFAULT_ACCESSIBLE=Use your default skin
 MENU_VIEW_THEMES_USE_DEFAULT_ACCESSIBLE=\u041a\u043e\u0440\u0438\u0441\u0442\u0438 \u043e\u0441\u043d\u043e\u0432\u043d\u0438 \u0441\u043a\u0438\u043d\u043e\u0432\u0430.
 #### MENU_VIEW_LANGS_TITLE=Change Language
-MENU_VIEW_LANGS_TITLE=\u0418\u0437\u0430\u0431\u0435\u0440\u0438 \u0458\u0435\u0437\u0438\u043a (H)
+MENU_VIEW_LANGS_TITLE=\u0418\u0437\u0430\u0431\u0435\u0440\u0438 \u0458\u0435\u0437\u0438\u043a (I)
 #### MENU_VIEW_LANGS_TITLE_MNEMONIC=H
-MENU_VIEW_LANGS_TITLE_MNEMONIC=H
+MENU_VIEW_LANGS_TITLE_MNEMONIC=I
 #### MENU_VIEW_LANGS_RESTART_REQUIRED=LimeWire must be restarted for the new language to take effect.
 MENU_VIEW_LANGS_RESTART_REQUIRED=\u041f\u0440\u043e\u0433\u0440\u0430\u043c \u043c\u043e\u0440\u0430 \u0431\u0438\u0442\u0438 \u0440\u0435\u0441\u0442\u0430\u0440\u0442\u043e\u0432\u0430\u043d \u0434\u0430 \u0431\u0438\u0441\u0442\u0435 \u0432\u0438\u0434\u0458\u0435\u043b\u0438 \u0440\u0435\u0437\u0443\u043b\u0442\u0430\u0442\u0435 \u043f\u0440\u043e\u043c\u0458\u0435\u043d\u0430.
 #### MENU_VIEW_LANGS_TRANSLATE_LIMEWIRE=Help Translate LimeWire
@@ -472,9 +472,9 @@ MENU_RESOURCES_PRO_MNEMONIC=P
 MENU_RESOURCES_PRO_ACCESSIBLE=\u041f\u0440\u0438\u043a\u0430\u0436\u0438 LimeWire PRO \u0432\u0435\u0431\u0441\u0430\u0458\u0442.
 
 #### MENU_TOOLS_TITLE=Tools
-MENU_TOOLS_TITLE=\u0410\u043b\u0430\u0442\u043a\u0435 (T)
+MENU_TOOLS_TITLE=\u0410\u043b\u0430\u0442\u043a\u0435 (A)
 #### MENU_TOOLS_TITLE_MNEMONIC=T
-MENU_TOOLS_TITLE_MNEMONIC=T
+MENU_TOOLS_TITLE_MNEMONIC=A
 #### MENU_TOOLS_STATISTICS=Statistics
 MENU_TOOLS_STATISTICS=\u0421\u0442\u0430\u0442\u0438\u0441\u0442\u0438\u043a\u0435 (S)
 #### MENU_TOOLS_STATISTICS_MNEMONIC=S
